# BB

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  README.md  code_style.xml  codeql-analysis.yml
BB1/: .cproject  .mxproject  .project  BB1 Debug.cfg  BB1 Debug.launch  BB1 Release.launch  BB1.ioc  STM32F767VITX_FLASH.ld  STM32F767VITX_RAM.ld
BB2/: .cproject  .gitignore  .mxproject  .project  BB2 Debug.cfg  BB2 Debug.launch  BB2.ioc  STM32H7A3VITX_FLASH.ld  STM32H7A3VITX_RAM.ld
BB2_loader/: .cproject  .gitignore  .mxproject  .project  BB2_loader Debug.launch  BB2_loader Release.launch  BB2_loader.ioc  STM32H7A3VITX_FLASH.ld
BB3/: .cproject  .gitignore  .project  BB3 Debug (1).cfg  BB3 Debug attach.cfg  BB3 Debug openocd.cfg  BB3 Release.cfg  BB3.ioc  STM32H7A3VITX_FLASH.ld  mx.scratch
BB3_loader/: .cproject  .project  (+4 more)
BB_esp_fw/main/: CMakeLists.txt  bluetooth.c  bluetooth.h  common.c  common.h  debug.c  debug.h  download.c  download.h  linked_list.c  linked_list.h  main.c  protocol.c  protocol.h  upload.c  upload.h  wifi.c  wifi.h
BB_esp_fw/main/bluetooth/: a2dp.c  a2dp.h  ble.c  ble.h  bluetooth.c  bluetooth.h  bt.c  bt.h  bt_app_av.c  bt_app_core.c  spp.c  spp.h
BB_esp_fw/main/drivers/: i2c.c  i2c.h  i2s.c  i2s.h  spi.c  spi.h  tas5720.c  tas5720.h  uart.c  uart.h
BB_esp_fw/main/etc/: stream.c  stream.h
BB_esp_fw/main/pipeline/: bluetooth.c  bluetooth.h  output.c  output.h  pipeline.c  pipeline.h  sound.c  sound.h  vario.c  vario.h
BB_esp_fw/main/server/: api.c  api.h  file.c  file.h  ob.c  ob.h  render.c  render.h  server.c  server.h
(+2214 files in other folders)
